--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3928,3 +3928,17 @@
 		.titleimg:after{content:'';display:block;height:100%;width:100%;top:0;left:0;position:absolute;pointer-events:none;z-index:3}
 		.titleimg img{filter:grayscale(.25)}
 		.titleimg::after{background:linear-gradient(90deg, #5f459f, #b84f8d);mix-blend-mode:overlay}
+
+		.videoWrapper {
+			position: relative;
+			padding-bottom: 56.25%; /* 16:9 */
+			padding-top: 25px;
+			height: 0;
+		}
+		.videoWrapper iframe {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
